<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/account_basic_preference">

        <SwitchPreference
            app:key="message"
            app:title="@string/account_message_preference"
            app:defaultValue="true" />

        <SwitchPreference
            app:key="theme"
            app:title="@string/account_theme_preference"
            app:defaultValue="false" />

        <ListPreference
            app:key="font_size"
            app:title="@string/account_font_size_preference"
            app:entries="@array/font_size_entries"
            app:entryValues="@array/font_size_values"
            app:defaultValue="middle"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>
</PreferenceScreen>