<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/navigation"
app:startDestination="@id/homeFragment">

<fragment
    android:id="@+id/homeFragment"
    android:name="com.example.bottom_menu_3.HomeFragment"
    android:label="@string/home_name"
    tools:layout="@layout/fragment_home" />
<fragment
    android:id="@+id/messageFragment"
    android:name="com.example.bottom_menu_3.MessageFragment"
    android:label="@string/message_name"
    tools:layout="@layout/fragment_message" />
<fragment
    android:id="@+id/accountFragment"
    android:name="com.example.bottom_menu_3.AccountFragment"
    android:label="@string/account_name"
    tools:layout="@layout/fragment_account" />

</navigation>