<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_view_item_image"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_research"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/list_view_item_label"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/home_research_label" />
            <TextView
                android:id="@+id/list_view_item_number"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/build_join_team_number" />
            <TextView
                android:id="@+id/list_view_item_date"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/build_join_team_date" />
            <TextView
                android:id="@+id/list_view_item_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/build_join_team_time" />
        </LinearLayout>
        <TextView
            android:id="@+id/list_view_item_text"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/home_list_view_text"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>