<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailedInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="88dp"
            android:layout_height="40dp"
            android:text="@string/build_join_team_label"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txt_detail_label_build"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/build_join_team_label"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="88dp"
            android:layout_height="40dp"
            android:text="@string/build_join_team_date"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txt_detail_date_build"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/build_join_team_date"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="88dp"
            android:layout_height="40dp"
            android:text="@string/build_join_team_time"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txt_detail_time_build"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/build_join_team_time"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="88dp"
            android:layout_height="40dp"
            android:text="@string/build_join_team_number"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txt_detail_number_build"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/build_join_team_number"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_detail_information_build"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="top|start"
        android:background="@drawable/build_join_team_edit_text_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_cancel_build"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:background="@color/light_lake_blue"
            android:text="@string/cancel_build"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>